<package>
<name>behaviors</name>
<description>Todo</description>
<version>0.1.0</version>
<license>MIT</license>
<author>Virginie Roupenel</author>
<maintainer email="info@hri.edu.au">NFHRI Maintainers</maintainer>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>actionlib</build_depend>
<build_depend>message_runtime</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>control_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>actionlib_msgs</build_depend>

<run_depend>message_runtime</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>control_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>actionlib_msgs</run_depend>

</package>
